--- a/src/posts/banana/1.md
+++ b/src/posts/banana/1.md
@@ -1,21 +1,50 @@
 ---
 icon: edit
-date: 2022-01-05
+date: 2023-04-03
 category:
-  - 香蕉
-  - 水果
+  - 工具使用
 tag:
   - 黄
   - 弯曲的
   - 长
+head:
+  - - meta
+    - name: referrer
+      content: no-referrer
 ---
 
-# 香蕉 1
+# IDEA下载教程
 
-## 标题 2
+官网下载包[Download IntelliJ IDEA: The Capable & Ergonomic Java IDE by JetBrains](https://www.jetbrains.com/idea/download/#section=windows)
 
-这里是内容。
+双击安装包，next
 
-### 标题 3
+![](https://img-blog.csdnimg.cn/65ed4d56c160490198c5df80ead0311e.png)
 
-这里是内容。
+我全勾选了
+
+等待安装
+
+![](https://img-blog.csdnimg.cn/011a59d51f6b4c62b3c73aaf2e7f3265.png)
+
+安装完成，重启一下电脑
+
+![](https://img-blog.csdnimg.cn/0515123a9f3448a39a388206eae02dd9.png)
+
+打开Idea
+
+![](https://img-blog.csdnimg.cn/39de8215bf4540138dff0d9fec7a278a.png)
+
+<img src="https://img-blog.csdnimg.cn/39de8215bf4540138dff0d9fec7a278a.png" referrerPolicy="no-referrer" />
+
+创建项目
+
+![](https://img-blog.csdnimg.cn/baa517d2ff8342ddb1fd705f09bfbd1a.png)
+
+测试代码运行成功
+
+![](https://img-blog.csdnimg.cn/5b53d7bcf1984bc78dfdb68da2a290b9.png)
+
+OK，Successful！
+
+哦，我是本机已经安装过eclipse了，本机已经存在java运行环境了，所以安装就比较简单，大概就是这样
