--- a/src/posts/banana/2.md
+++ b/src/posts/banana/2.md
@@ -1,26 +1,168 @@
 ---
 icon: edit
-date: 2022-01-06
+date: 2023-04-04
 category:
-  - 香蕉
-  - 水果
+  - java
 tag:
   - 黄
   - 弯曲的
   - 长
 star: 10
+head:
+  - - meta
+    - name: referrer
+      content: no-referrer
 ---
 
-# 香蕉 2
+# Java代码实现对称加密DES和AES(含图像界面)
 
-一个被数字 `10` 星标了的香蕉文章。
+## 实验内容和要求
 
-<!-- more -->
+采用Java实现采用对称密码算法的应用软件，所用算法包括DES算法和AES算法。要求该软件具有图形用户界面，能生成密钥，以及对字符串和文件进行加解密
 
-## 标题 2
+## 参考代码
 
-这里是内容。
+```java
+// 文件名： test01.java
 
-### 标题 3
+import javax.crypto.*;
+import javax.crypto.spec.*;
+import javax.swing.*;
+import java.awt.*;
+import java.awt.event.*;
+import java.io.*;
+import java.nio.charset.StandardCharsets;
 
-这里是内容。
+public class test01 extends JFrame implements ActionListener {
+    private JFileChooser fileChooser = new JFileChooser();
+    private JTextArea inputArea = new JTextArea(10, 40);
+    private JTextArea outputArea = new JTextArea(10, 40);
+    private JButton encryptButton = new JButton("加密");
+    private JButton decryptButton = new JButton("解密");
+    private JButton fileButton = new JButton("选择文件");
+    private JComboBox<String> algorithmBox = new JComboBox<String>(new String[] {"DES", "AES"});
+    private JLabel keyLabel = new JLabel("密钥:");
+    private JTextField keyField = new JTextField(20);
+
+    public test01() {
+        super("对称加密算法实现");
+        setDefaultCloseOperation(JFrame.EXIT_ON_CLOSE);
+        JPanel mainPanel = new JPanel();
+        mainPanel.setLayout(new BoxLayout(mainPanel, BoxLayout.Y_AXIS));
+        JPanel inputPanel = new JPanel();
+        inputPanel.add(new JLabel("输入:"));
+        inputPanel.add(new JScrollPane(inputArea));
+        JPanel outputPanel = new JPanel();
+        outputPanel.add(new JLabel("输出:"));
+        outputPanel.add(new JScrollPane(outputArea));
+        JPanel buttonPanel = new JPanel();
+        buttonPanel.add(encryptButton);
+        buttonPanel.add(decryptButton);
+        buttonPanel.add(fileButton);
+        buttonPanel.add(algorithmBox);
+        buttonPanel.add(keyLabel);
+        buttonPanel.add(keyField);
+        mainPanel.add(inputPanel);
+        mainPanel.add(outputPanel);
+        mainPanel.add(buttonPanel);
+        encryptButton.addActionListener(this);
+        decryptButton.addActionListener(this);
+        fileButton.addActionListener(this);
+        setContentPane(mainPanel);
+        pack();
+        setVisible(true);
+    }
+
+    public void actionPerformed(ActionEvent e) {
+        if (e.getSource() == encryptButton) {
+            encrypt();
+        } else if (e.getSource() == decryptButton) {
+            decrypt();
+        } else if (e.getSource() == fileButton) {
+            chooseFile();
+        }
+    }
+
+    private void chooseFile() {
+        int returnValue = fileChooser.showOpenDialog(this);
+        if (returnValue == JFileChooser.APPROVE_OPTION) {
+            File file = fileChooser.getSelectedFile();
+            try {
+                BufferedReader reader = new BufferedReader(new FileReader(file));
+                inputArea.setText("");
+                String line = reader.readLine();
+                while (line != null) {
+                    inputArea.append(line);
+                    line = reader.readLine();
+                    if (line != null) {
+                        inputArea.append("\n");
+                    }
+                }
+                reader.close();
+            } catch (IOException e) {
+                JOptionPane.showMessageDialog(this, "Error reading file: " + e.getMessage(), "Error", JOptionPane.ERROR_MESSAGE);
+            }
+        }
+    }
+
+    private void encrypt() {
+        try {
+            String algorithm = (String) algorithmBox.getSelectedItem();
+            String keyString = keyField.getText();
+            byte[] keyBytes = keyString.getBytes(StandardCharsets.UTF_8);
+            SecretKey key;
+            if (algorithm.equals("DES")) {
+                key = new SecretKeySpec(keyBytes, "DES");
+            } else {
+                key = new SecretKeySpec(keyBytes, "AES");
+            }
+            Cipher cipher = Cipher.getInstance(algorithm);
+            cipher.init(Cipher.ENCRYPT_MODE, key);
+            String input = inputArea.getText();
+            byte[] inputBytes = input.getBytes(StandardCharsets.UTF_8);
+            byte[] outputBytes = cipher.doFinal(inputBytes);
+            String output = new String(outputBytes, StandardCharsets.UTF_8);
+            outputArea.setText(output);
+        } catch (Exception e) {
+            JOptionPane.showMessageDialog(this, "Error encrypting: "
+                    + e.getMessage(), "Error", JOptionPane.ERROR_MESSAGE);
+        }
+    }
+
+
+    private void decrypt() {
+        try {
+            String algorithm = (String) algorithmBox.getSelectedItem();
+            String keyString = keyField.getText();
+            byte[] keyBytes = keyString.getBytes();
+            SecretKey key;
+            if (algorithm.equals("DES")) {
+                key = new SecretKeySpec(keyBytes, "DES");
+            } else {
+                key = new SecretKeySpec(keyBytes, "AES");
+            }
+            Cipher cipher = Cipher.getInstance(algorithm);
+            cipher.init(Cipher.DECRYPT_MODE, key);
+            String input = inputArea.getText();
+            byte[] inputBytes = input.getBytes();
+            byte[] outputBytes = cipher.doFinal(inputBytes);
+            String output = new String(outputBytes);
+            outputArea.setText(output);
+        } catch (Exception e) {
+            JOptionPane.showMessageDialog(this, "Error decrypting: " +
+                    e.getMessage(), "Error", JOptionPane.ERROR_MESSAGE);
+        }
+    }
+
+    public static void main(String[] args) {
+        new test01();
+    }
+}
+```
+
+实现效果：
+
+![在这里插入图片描述](https://img-blog.csdnimg.cn/862b40f2faa243e58098e9a4c5cd83fa.png)
+
+🆗，大概就是这样
+
